inserted new form

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <h1>Le Novita'</h1>
     <h2>New photo gallery</h2>
    </section>
+   <section>
+    <h2>contact form</h2>
+   </section>
    <footer>
     <h2>My restaurant address</h2>
    </footer>
+   
 </body>
 </html>
